--- a/package.json
+++ b/package.json
@@ -86,6 +86,9 @@
     "viem": "^2.17.0",
     "wagmi": "^2.12.0"
   },
+  "optionalDependencies": {
+    "firebase": "^10.12.0"
+  },
   "devDependencies": {
     "@tanstack/react-query": "^5.83.0",
     "@testing-library/jest-dom": "^6.9.1",
