--- a/package.json
+++ b/package.json
@@ -80,9 +80,13 @@
     "react-dom": "^18.0.0"
   },
   "dependencies": {
+    "@coinbase/agentkit": "^0.10.3",
+    "@farcaster/auth-kit": "^0.8.1",
     "@hashgraph/sdk": "^2.50.0",
+    "@zerodev/sdk": "^5.5.4",
     "ethers": "^6.15.0",
     "lucide-react": "^0.460.0",
+    "siwe": "^3.0.0",
     "viem": "^2.17.0",
     "wagmi": "^2.12.0"
   },
