--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polymathuniversata/echain-wallet",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A comprehensive wallet management library for Echain, supporting Base network and Hedera Hashgraph multisig functionality with React hooks and UI components",
   "type": "module",
   "main": "dist/index.js",
@@ -105,6 +105,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "esbuild": "^0.25.10",
     "eslint": "^8.52.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
